test/type_inference/positive/struct_ptr.impala
struct S[T] {
    t: T
}

fn main() -> () {
    let s = S{ t: ~42 };
}
