test/type_inference/negative/type_struct.impala
struct A[T] {
    data : &[T]
}

fn test() -> () {
    let tmp = A { data : ~[23:float] };
}

fn testt[T]() -> () {
    let foo = A { data : ~[23:T] };
    let bar = A[T] { data : ~[23:float] }; // what happens if T != float?
}
